test_suite/ui/overlapping_flags.stderr
error[E0081]: discriminant value `1` assigned more than once
 --> ui/overlapping_flags.rs:4:1
  |
4 | enum Foo {
  | ^^^^^^^^
5 |     SomeFlag = 1 << 0,
  |                ------ `1` assigned here
6 |     OverlappingFlag = 1 << 0,
  |                       ------ `1` assigned here
